# qdbus-p2p

./: CMakeLists.txt  README.md
api/dbus/: io.github.blackdesk.QDBusP2PExample.Server.xml
apps/client/src/: main.cpp
apps/server/: CMakeLists.txt
apps/server/src/: main.cpp
src/QDBusP2PExample/: Client.cpp  Client.hpp  Server.cpp  Server.hpp  configure.hpp.in  dbus.cpp  dbus.hpp  init.cpp  init.hpp
